updated officer view

--- a/bluerate/templates/profile.html
+++ b/bluerate/templates/profile.html
@@ -6,13 +6,13 @@
 		</div>
 		<div class="col-sm-8">
 			{{ officer.rank }}
-			{{ officer.first }} {{ officer.last}}
-			Badge Number: {{ officer.badge }}
+			{{ officer.first_name }} {{ officer.last_name}}
+			Badge Number: {{ officer.badge_number }}
 			Department History:
-			{{ officer.depts }}
+			{{ officer.dept }}
 		</div>
 		<div class="col-sm-2">
-			{{ officer.stars }}
+			{{ officer.rating }}
 		</div>
 	</div>
 	<div class="row" id="reviews">
