--- a/br_app/static/br_app/index.css
+++ b/br_app/static/br_app/index.css
@@ -16,7 +16,6 @@
 	height:100%;
 	display:block;
 	margin: 0 auto;
-
 }
 .logo{
 	height:100%;
@@ -31,9 +30,6 @@
 	font-family: 'Montserrat', sans-serif;
 	font-weight:20;
 	font-size:20px;
-	
-
-
 }
 .logo h1 span {
 	font-weight: 800;
@@ -65,14 +61,13 @@
 	
 }
 body{
-	background-color: blue;
+	background-color: #F5F5F5;
 }
-.main{
-	position:absolute;
-	top:50%;
-	left:50%;
-	transform: translate(-50%,-50%);
+.search_result:hover {
+	background-color: #31b0d5;
+	border-radius: 10px;
 }
+/*
 input {
 	border: 3px solid red;
 	height:40px;
@@ -83,6 +78,7 @@ input {
 	font-size: 18px;
 	color:darkblue;
 }
+*/
 ::-webkit-input-placeholder {
 	color:lightgreen;
 }
@@ -92,6 +88,7 @@ input {
 ::-ms-input-placeholder {
 	color:lightgreen;
 }
+/*
 .btn{
 	position: absolute;
 	width: 60px;
@@ -105,14 +102,4 @@ input {
 	line-height: 60px;
 	border: 3px solid red;
 	outline: none;
-}
-
-
-
-
-
-
-
-
-
-
+}*/
