--- a/br_app/templates/profile.html
+++ b/br_app/templates/profile.html
@@ -1,27 +1,35 @@
+{% include "head.html" %}
+{% include "navbar.html" %}
 
-<div class="container-fluid">
+<div class="container m-4">
 	<div class="row">
 		<div class="col-sm-2">
-			<img src="{{ officer.image }}" class="img-thumbnail" alt="">
+			{% load static %}
+			<img src="{% static "br_app/male_default.png" %}" class="img-thumbnail" alt="">
+			<!-- <img src="{{ officer.image }}" class="img-thumbnail" alt=""> -->
 		</div>
 		<div class="col-sm-8">
 			{{ officer.rank }}
-			{{ officer.first_name }} {{ officer.last_name}}
-			Badge Number: {{ officer.badge_number }}
+			{{ officer.firstname }} {{ officer.lastname}}
+			<br>
+			Badge Number: {{ officer.badgenumber }}
+			<br>
 			Department History:
-			{{ officer.dept }}
+			{{ officer.city }}
 		</div>
 		<div class="col-sm-2">
-			{{ officer.rating }}
+			Rating: {{ officer.numberstars }}/5
 		</div>
 	</div>
+	<hr>
 	<div class="row" id="reviews">
 		{% if logged_in %}
-			<div class="col-sm-2">
-			</div>
-			<div class="col-sm-10">
+			<div class="col-sm-12">
+				<form class="" action="/new_review">
 				<div class="form-group">
-					<textarea class="form-control" rows="4" id="create-review"></textarea>
+					<input class="form-control w-20" id="username" placeholder="Username"></textarea>
+					<input class="form-control w-20" id="rating" placeholder="Rating (out of 5)"></textarea>
+					<input class="form-control" id="review" placeholder="What do you think?"></textarea>
 					<button type="button" class="btn btn-primary">Submit Review</button>
 				</div>
 			</div>
@@ -29,16 +37,19 @@
 			Have a review for this officer? Log in or register to create a review!
 		{% endif %}
 
-		{% if officer.reviews %}
+		{% if reviews %}
 			<div class="container-fluid">
-				{% for review in officer.reviews %}
+				{% for review in reviews %}
 					<div class="row">
-						<div class="col-sm-2">
-							{{ review.username }}
-							{{ review.stars }}
+						<div class="col-sm-12">
+							{{ review.user.username }}	{{ review.stars }}/5
+							<br>
+							<b>{{ review.summary}}</b>
 						</div>
-						<div class="col-sm-10">
-							{{ review.text }}
+					</div>
+					<div class="row">
+						<div class="col-sm-12">
+							{{ review.description }}
 						</div>
 					</div>
 				{% endfor %}
