--- a/br_app/templates/results.html
+++ b/br_app/templates/results.html
@@ -1,29 +1,32 @@
+{% include "head.html" %}
+{% include "navbar.html" %}
+
+<div class="container d-flex h-100 text-center mt-4" style="flex-direction: column !important">
 {% if officers %}
 	{% for officer in officers %}
-	<table>
-		<tr>
-			<td rowspan="3">
-				{{ officer.image }}
-			</td>
-			<td>
+	<a class="search_result" href="/profile/{{ officer.profile_id }}">
+		<div class="row justify-content-around align-self-center w-100 m-4">
+			<div class="col-sm-4">
+				{% load static %}
+				<img src="{% static "br_app/male_default.png" %}" class="img-thumbnail" alt="">
+				<!-- <img src="{{ officer.image }}" class="img-thumbnail" alt=""> -->
+			</div>
+			<div class="col-sm-4">
 				<b> {{ officer.rank }} </b>
-				{{ officer.first }}
-				{{ officer.last }}
-			</td>
-			<td>
-				{{ officer.city }}
-			</td>
-		</tr>
-		<tr></tr>
-			<td>
-				{{ officer.badge }}
-			</td>
-			<td>
-				{{ officer.stars }}
-			</td>
-		<tr></tr>
-	</table>
+				{{ officer.firstname }}
+				{{ officer.lastname }}
+				<br>
+				Badge Number: {{ officer.badgenumber }}
+			</div>
+			<div class="col-sm-4">
+				Department: {{ officer.city }}
+				<br>
+				Rating: {{ officer.numberstars }}
+			</div>
+		</div>
+	</a>
 	{% endfor %}
 {% else %}
 	<p> We can't find the officer you're looking for. You may create a new officer, or search again. </p>
 {% endif %}
+</div>
