--- a/br_app/static/br_app/index.css
+++ b/br_app/static/br_app/index.css
@@ -67,6 +67,9 @@ body{
 	background-color: #31b0d5;
 	border-radius: 10px;
 }
+.form-group {
+	margin: 5px;
+}
 /*
 input {
 	border: 3px solid red;
