--- a/br_app/templates/index.html
+++ b/br_app/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%">
 <title>
   </title>
 {% include "head.html" %}
-<body>
+<body style="height:100%">
 
+	{% include "navbar.html" %}
+<!--
   <div class="header">
     <div class="innerheader">
       <div class="logo">
@@ -19,24 +21,26 @@
       </ul>
     </div>
   </div>
-<!-- ------------------------------>
-	<div class="container d-flex h-100">
-		<div class="row justify-content-center align-self-center">
-			<form class="form-inline" action="/search" method="get" id="form">
-				<div class="form-group">
-					<input class="form-control" type="text" name="first" placeholder="First Name" >
-				</div>
-				<div class="form-group">
-					<input class="form-control" type="text" name="last" placeholder="Last Name" >
-				</div>
-				<div class="form-group">
-					<input class="form-control" type="text" name="badge" placeholder="Badge Number" >
-				</div>
-				<div class="form-group">
-					<input class="form-control" type="text" name="city" placeholder="Department" >
-				</div>
-				<input type="submit" form="form" class="btn btn-info" value="Search">
-			</form>
+------------------------------>
+	<div class="container h-100 d-flex justify-content-center align-items-center">
+		<div class="row">
+			<div class="col-sm-12">
+				<form class="form-inline" action="/search" method="get" id="form">
+					<div class="form-group">
+						<input class="form-control" type="text" name="first" placeholder="First Name" >
+					</div>
+					<div class="form-group">
+						<input class="form-control" type="text" name="last" placeholder="Last Name" >
+					</div>
+					<div class="form-group">
+						<input class="form-control" type="text" name="badge" placeholder="Badge Number" >
+					</div>
+					<div class="form-group">
+						<input class="form-control" type="text" name="city" placeholder="Department" >
+					</div>
+					<input type="submit" form="form" class="btn btn-info" value="Search">
+				</form>
+			</div>
       		</div>
 	</div>
 </body>
