somework on results

--- a/br_app/templates/results.html
+++ b/br_app/templates/results.html
@@ -21,7 +21,7 @@
 			<div class="col-sm-4">
 				Department: {{ officer.city }}
 				<br>
-				Rating: {{ officer.numberstars }}
+				Rating: {{ officer.numberstars }}/5
 			</div>
 		</div>
 	</a>
