--- a/br_app/static/br_app/index.css
+++ b/br_app/static/br_app/index.css
@@ -91,6 +91,17 @@ input {
 ::-ms-input-placeholder {
 	color:lightgreen;
 }
+.container{
+	padding:4px;
+}
+.form-group {
+	margin-top:15px;
+}
+.btn{
+	margin-left:2px;
+	margin-top:15px;
+}
+
 /*
 .btn{
 	position: absolute;
