--- a/br_app/static/br_app/index.css
+++ b/br_app/static/br_app/index.css
@@ -54,14 +54,19 @@
 .navigation a li {
 	display:table-cell;
 	vertical-align:middle;
-	height:100%;
+	height:100% auto;
 	color:white;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
 	
 }
 body{
-	background-color: #F5F5F5;
+	background-image:url('https://i.ytimg.com/vi/5hmH7Gs7QrI/maxresdefault.jpg');
+	height:100%;
+	background-position:center;
+	background-repeat:no-repeat;
+	background-size:cover;
+	background-attachment:fixed;
 }
 .search_result:hover {
 	background-color: #31b0d5;
